--- a/app/views/ponds/_form.html.erb
+++ b/app/views/ponds/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :water_type %><br>
-    <%= f.text_area :water_type %>
+    <%= f.text_field :water_type %>
   </div>
   <div class="actions">
     <%= f.submit %>
