--- a/app/views/tadpoles/_form.html.erb
+++ b/app/views/tadpoles/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_for(@frog) do |f| %>
-  <% if @frog.errors.any? %>
+<%= form_for(@tadpole) do |f| %>
+  <% if @tadpole.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@frog.errors.count, "error") %> prohibited this frog from being saved:</h2>
+      <h2><%= pluralize(@tadpole.errors.count, "error") %> prohibited this frog from being saved:</h2>
 
       <ul>
-      <% @frog.errors.full_messages.each do |msg| %>
+      <% @tadpole.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
       <% end %>
       </ul>
@@ -18,10 +18,6 @@
   <div class="field">
     <%= f.label :color %><br>
     <%= f.text_field :color %>
-  </div>
-  <div class="field">
-    <%= f.label :pond_id %><br>
-    <%= f.collection_select(:pond_id, @ponds, :id, :name) %>
   </div>
   <div class="actions">
     <%= f.submit %>
