--- a/app/views/tadpoles/_form.html.erb
+++ b/app/views/tadpoles/_form.html.erb
@@ -14,6 +14,7 @@
   <div class="field">
     <%= f.label :name %><br>
     <%= f.text_field :name %>
+    <%= f.hidden_field :frog_id, :value => @tadpole.frog_id %>
   </div>
   <div class="field">
     <%= f.label :color %><br>
