--- a/app/views/tadpoles/show.html.erb
+++ b/app/views/tadpoles/show.html.erb
@@ -2,7 +2,7 @@
 <p>Color: <%= @tadpole.color %></p>
 <p>Parent: <a href="/frogs/<%= @tadpole.frog.id %>"><%= @tadpole.frog.name %></a></p>
 <p>Lives: <a href="/ponds/<%= @tadpole.frog.pond.id %>"><%= @tadpole.frog.pond.name %></a></p>
-<p><strong><a href="/tadpoles/<%= @tadpole.id %>/evolve">Evolve to frog</a></strong></p>
+<p><strong><%= link_to 'Evolve to frog', evolve_tadpole_path %></strong></p>
 <%= link_to 'Back', tadpoles_path %> | 
 <%= link_to 'Edit', edit_tadpole_path %> | 
 <%= link_to 'Delete', tadpole_path, method: :delete %>
