--- a/app/views/frogs/show.html.erb
+++ b/app/views/frogs/show.html.erb
@@ -1,15 +1,15 @@
 <h1><%= @frog.name %> Frog</h1>
 <p>Color: <%= @frog.color %></p>
-<p>Lives: <a href="/ponds/<%= @frog.pond.id %>"><%= @frog.pond.name %></a></p>
+<p>Lives: <%= link_to @frog.pond.name, pond_path(@frog.pond_id) %></p>
 <% unless @frog.tadpoles.empty? %>
   <h2>Children</h2>
   <ol>
     <% @frog.tadpoles.each do |tadpole| %>
-      <li><a href="/tadpoles/<%= tadpole.id %>"><%= tadpole.name %></a></li>
+      <li><%= link_to tadpole.name, tadpole_path(tadpole) %></li>
     <% end %>
   </ol><br>
 <% end %>
-<p><strong><%= link_to 'Create new tadpole baby', new_frog_tadpole_path(@frog.id) %></strong></p>
+<p><strong><%= link_to 'Create new tadpole baby', new_frog_tadpole_path(@frog) %></strong></p>
 <%= link_to 'Back', frogs_path %> | 
 <%= link_to 'Edit', edit_frog_path %> | 
 <%= link_to 'Delete', frog_path, method: :delete %>
