--- a/app/views/ponds/index.html.erb
+++ b/app/views/ponds/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Ponds</h1>
 <% @ponds.each do |pond| %>
-  <p><a href="/ponds/<%= pond.id %>"><%= pond.name %></a></p>
+  <p><%= link_to pond.name, pond_path(pond) %></p>
 <% end %>
-<p><a href="/ponds/new">Create a new pond</a></p>
+<p><%= link_to 'Create a new pond', new_pond_path %></p>
