--- a/app/views/ponds/show.html.erb
+++ b/app/views/ponds/show.html.erb
@@ -3,10 +3,10 @@
 <p>Resident frogs and their tadpoles:</p>
 <ol>
   <% @pond.frogs.each do |frog| %>
-    <li><a href="/frogs/<%= frog.id %>"><%= frog.name %> frog</a>
+    <li><%= link_to "#{frog.name} frog", frog_path(frog) %>
       <ol>
         <% frog.tadpoles.each do |tadpole| %>
-          <li><a href="/tadpoles/<%= tadpole.id %>"><%= tadpole.name %> tadpole</a></li>
+          <li><%= link_to "#{tadpole.name} tadpole", tadpole_path(tadpole) %></li>
         <% end %>
       </ol>
     </li>
